--- a/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -78,6 +78,9 @@ Busybee\People\PersonBundle\Entity\Person:
             type: string
             length: 32
             nullable: true
+        comment:
+            type: text
+            nullable: true
     manyToOne:
         createdBy:
             targetEntity: Busybee\Core\SecurityBundle\Entity\User
