--- a/src/Busybee/People/StaffBundle/Resources/config/validation/Staff.yml
+++ b/src/Busybee/People/StaffBundle/Resources/config/validation/Staff.yml
@@ -9,3 +9,4 @@ Busybee\People\StaffBundle\Entity\Staff:
         house:
             - \Busybee\Core\TemplateBundle\Validator\SettingChoice:
                 name: 'house.list'
+                valueIn: 'name'
