--- a/src/Busybee/People/StudentBundle/Resources/config/validation/Student.yml
+++ b/src/Busybee/People/StudentBundle/Resources/config/validation/Student.yml
@@ -13,3 +13,4 @@ Busybee\People\StudentBundle\Entity\Student:
         house:
             - Busybee\Core\TemplateBundle\Validator\SettingChoice:
                 name: 'house.list'
+                valueIn: 'name'
