--- a/src/Busybee/Core/SystemBundle/Resources/config/menu/parameters.yml
+++ b/src/Busybee/Core/SystemBundle/Resources/config/menu/parameters.yml
@@ -23,20 +23,19 @@ parameters:
             order: 11
             route: setting_manage
         12:
-            name: Manage System Settings
-            label: menu.site.setting.manage
+            label: menu.admin.timetable
+            name: User Admin
             role: ROLE_REGISTRAR
             node: 1
-            route: setting_manage
-            order: 12
-            menu: 12
-        124:
-            name: Bundle List
-            label: menu.site.bundle.list
-            role: ROLE_SYSTEM_ADMIN
-            node: 12
-            route: bundle_list
-            order: 124
+            order: 13
+            route: calendar_years
+        13:
+            label: menu.admin.user
+            name: User Admin
+            role: ROLE_REGISTRAR
+            node: 1
+            order: 13
+            route: security_user_list
     sections:
         School Admin:
             groupings:
@@ -62,12 +61,46 @@ parameters:
                     label: menu.year.calendar.display
                     params: {}
         System Admin:
+            extend_update:
+                manage_bundles:
+                    route: bundle_list
+                    label: menu.site.bundle.list
+                    role: ROLE_REGISTRAR
+                    params: {}
+                acknowledgement:
+                    route: acknowledgement
+                    label: menu.site.acknowledgement
+                    role: []
+                    params: {}
             settings:
                 setting_manage:
                     label: menu.setting.manage
                     role: ROLE_REGISTRAR
                     route: setting_manage
                     params: {}
+                page_security:
+                    label: menu.setting.page.security
+                    role: ROLE_REGISTRAR
+                    route: page_list
+                    params: {}
             hidden:
                 - setting_edit
                 - setting_edit_name
+                - page_edit
+        Timetable Admin:
+            timetable:
+                calendar_years:
+                    label: menu.calendar.manage
+                    role: ROLE_REGISTRAR
+                    route: calendar_years
+                    params: {}
+            hidden:
+                - year_edit
+        User Admin:
+            user_management:
+                security_user_list:
+                    label: menu.user.list
+                    role: ROLE_REGISTRAR
+                    route: security_user_list
+                    params: {}
+            hidden: []
