--- a/src/Busybee/People/StaffBundle/Resources/config/services.yml
+++ b/src/Busybee/People/StaffBundle/Resources/config/services.yml
@@ -42,6 +42,9 @@ parameters:
             contact:
                 route: contact_manage
                 prompt: person.pagination.contact
+            user:
+                route: user_manage
+                prompt: person.pagination.user
         transDomain: BusybeePersonBundle
     StaffBundle:
         version: 0.0.01
