--- a/src/Busybee/Facility/InstituteBundle/Resources/config/doctrine/Department.orm.yml
+++ b/src/Busybee/Facility/InstituteBundle/Resources/config/doctrine/Department.orm.yml
@@ -19,10 +19,23 @@ Busybee\Facility\InstituteBundle\Entity\Department:
             type: string
             length: '4'
             unique: true
+        importIdentifier:
+            type: string
+            length: '12'
+            nullable: true
+        blurb:
+            type: text
+            nullable: true
+        logo:
+            type: string
+            length: 150
+            nullable: true
         lastModified:
             type: datetime
+            column: last_modified
         createdOn:
             type: datetime
+            column: created_on
     oneToMany:
         staff:
             targetEntity: Busybee\Facility\InstituteBundle\Entity\DepartmentStaff
@@ -44,10 +57,10 @@ Busybee\Facility\InstituteBundle\Entity\Department:
         createdBy:
             targetEntity: Busybee\Core\SecurityBundle\Entity\User
             joinColumns:
-                createdBy:
+                created_by:
                     referencedColumnName: id
         modifiedBy:
             targetEntity: Busybee\Core\SecurityBundle\Entity\User
             joinColumns:
-                modifiedBy:
+                modified_by:
                     referencedColumnName: id
