--- a/src/Busybee/Facility/InstituteBundle/Resources/config/routing.yml
+++ b/src/Busybee/Facility/InstituteBundle/Resources/config/routing.yml
@@ -13,6 +13,9 @@ department_edit:
 campus_space_duplicate:
     path:     /campus/space/duplicate/
     defaults: { _controller: BusybeeInstituteBundle:Campus:duplicateSpace }
-department_staff_remove:
-    path:     /department/staff/{id}/remove/
-    defaults: { _controller: BusybeeInstituteBundle:Department:removeStaff }
+department_member_remove:
+    path:     /department/member/{id}/remove/
+    defaults: { _controller: BusybeeInstituteBundle:Department:removeMember }
+department_logo_delete:
+    path:     /department/logo/{id}/delete/
+    defaults: { _controller: BusybeeInstituteBundle:Department:deleteLogo }
