--- a/src/Busybee/Facility/InstituteBundle/Resources/config/validation/Department.yml
+++ b/src/Busybee/Facility/InstituteBundle/Resources/config/validation/Department.yml
@@ -15,7 +15,7 @@ Busybee\Facility\InstituteBundle\Entity\Department:
             - NotBlank: ~
             - Length:
                 max: 4
-        staff:
+        members:
             - Valid: ~
         type:
             - NotBlank: ~
