Grade to Student
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -178,4 +178,5 @@ parameters:
                 prefix: grade
             requirements:
                 - Student
+                - Calendar
             description: bundle.description.grade
