--- a/src/Busybee/Core/CalendarBundle/Resources/config/services.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/config/services.yml
@@ -8,6 +8,27 @@ parameters:
         calendar.status.past: past
         calendar.status.current: current
         calendar.status.future: future
+    gradePagination:
+        alias: g
+        sortBy:
+            grade.sequence.sort:
+                g.sequence: ASC
+            grade.name.sort:
+                g.name: ASC
+                g.grade: ASC
+        limit: '25'
+        searchList:
+            - g.name
+            - g.grade
+        select:
+            - g.name
+            - g.grade
+        join:
+            g.year:
+                type: leftJoin
+                alias: y
+        transDomain: BusybeeCalendarBundle
+
 services:
     busybee_core_calendar.model.current_year:
         class: Busybee\Core\CalendarBundle\Model\CurrentYear
@@ -117,6 +138,7 @@ services:
         arguments:
             - '@doctrine.orm.entity_manager'
             - '@busybee_core_system.setting.setting_manager'
+            - '@busybee_core_calendar.model.grade_manager'
         tags:
             - { name: form.type }
     busybee_core_calendar.validator.constraints.grade_validator:
@@ -134,3 +156,9 @@ services:
         class: Busybee\Core\CalendarBundle\Service\WidgetService\Calendar
         arguments:
             - '@busybee_core_system.setting.setting_manager'
+    busybee_core_calendar.pagination.grade_pagination:
+        class: Busybee\Core\CalendarBundle\Pagination\GradePagination
+        arguments:
+            - '%gradePagination%'
+            - '@busybee_core_calendar.repository.grade_repository'
+            - '@busybee_core_system.model.my_container'
