--- a/src/Busybee/Core/CalendarBundle/Resources/config/validation/Grade.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/config/validation/Grade.yml
@@ -11,3 +11,6 @@ Busybee\Core\CalendarBundle\Entity\Grade:
                 - year
             message: grade.sequence.unique
             errorPath: grade
+    properties:
+        website:
+            - Url: ~
